add padrões CSS

--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
-//código omitido
-
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
     <header></header>
     <main>
@@ -10,6 +14,7 @@
         <p>Olá! Sou Paulo Marinato, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <a href="https://instagram.com/2paulomarinato">Instagram</a>
         <a href="https://github.com/paulomarinato">Github</a>
+        <img src="Paulo.jpg" alt="Foto do Paulo Marinato">
     </main>
     <footer></footer>
 </body>
