--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">   
 </head>
 <body>
     <header></header>
     <main>
         <h1>Eleve seu negócio digital a outro nível<strong>com um Front-end de qualidade!</strong></h1>
-        <p>Olá! Sou Paulo Marinato, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-        <a href="https://instagram.com/2paulomarinato">Instagram</a>
-        <a href="https://github.com/paulomarinato">Github</a>
-        <img src="Paulo.jpg" alt="Foto do Paulo Marinato">
+        <p>Olá! Sou Paulo Marinato, desenvolvedora Front-end com especialidade em <span>React, HTML e CSS</span>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+        <button href="https://instagram.com/2paulomarinato">Instagram</button>
+        <button href="https://github.com/paulomarinato">Github</button>
+        <img src="Paulo.jpg" alt="Foto do Paulo Marinato" height="410" width="330">        
     </main>
     <footer></footer>
 </body>
