--- a/index.html
+++ b/index.html
@@ -9,12 +9,14 @@
 </head>
 <body>
     <header></header>
-    <main>
-        <h1>Eleve seu negócio digital a outro nível<strong>com um Front-end de qualidade!</strong></h1>
-        <p>Olá! Sou Paulo Marinato, desenvolvedora Front-end com especialidade em <span>React, HTML e CSS</span>. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+    <main class="apresentacao">
+        <section class="apresentacao__conteudo">
+        <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque"> com um Front-end de qualidade!</strong></h1>
+        <p class="apresentacao__conteudo__texto">Olá! Sou Paulo Marinato, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
         <button href="https://instagram.com/2paulomarinato">Instagram</button>
         <button href="https://github.com/paulomarinato">Github</button>
-        <img src="Paulo.jpg" alt="Foto do Paulo Marinato" height="410" width="330">        
+    </section>
+        <img src="Paulo.jpg" alt="Foto do Paulo Marinato" width="410" height="550">
     </main>
     <footer></footer>
 </body>
