--- a/index.html
+++ b/index.html
@@ -1,23 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
-    <link rel="stylesheet" href="styles.css">   
+    <title>Portifolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header></header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-        <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque"> com um Front-end de qualidade!</strong></h1>
-        <p class="apresentacao__conteudo__texto">Olá! Sou Paulo Marinato, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-        <button href="https://instagram.com/2paulomarinato">Instagram</button>
-        <button href="https://github.com/paulomarinato">Github</button>
-    </section>
-        <img src="Paulo.jpg" alt="Foto do Paulo Marinato" width="410" height="550">
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
+            class="titulo-destaque">com um Front-end de qualidade!
+            </strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Paulo Marinato, desenvolvedor
+            Front-end com especialidade em React, HTML e
+            CSS. Ajudo pequenos negócios e designers a
+            colocarem em prática boas ideias. Vamos
+            conversar?</p>
+            <div class="apresentacao__links">
+                <a class="apresentacao__links__link" href="https://instagram.com/2paulosmarinato">Instagram</a>
+                <a class="apresentacao__links__link" href="https://github.com/paulomarinato">GitHub</a>
+            </div>
+        </section>
+        <img src="Paulo.jpg" alt="Foto de Paulo Marinato programandor" width="410" height="555">
     </main>
     <footer></footer>
 </body>
+
 </html>
