--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <header></header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
-            class="titulo-destaque">com um Front-end de qualidade!
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong 
+            class="titulo-destaque"> com um Front-end de qualidade!
             </strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Paulo Marinato, desenvolvedor
             Front-end com especialidade em React, HTML e
@@ -22,13 +22,16 @@
             colocarem em prática boas ideias. Vamos
             conversar?</p>
             <div class="apresentacao__links">
-                <a class="apresentacao__links__link" href="https://instagram.com/2paulosmarinato">Instagram</a>
-                <a class="apresentacao__links__link" href="https://github.com/paulomarinato">GitHub</a>
+                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
+                <a class="apresentacao__links__link" href="https://instagram.com/2paulosmarinato"><img src="assest/instagram.png"> Instagram </a>
+                <a class="apresentacao__links__link" href="https://github.com/paulomarinato"><img src="assest/github.png"> GitHub </a>
             </div>
         </section>
-        <img src="Paulo.jpg" alt="Foto de Paulo Marinato programandor" width="410" height="555">
+        <img src="assest/Paulo.jpg" alt="Foto de Paulo Marinato programandor" width="410" height="555">
     </main>
-    <footer></footer>
+    <footer class="rodape">
+        <p>Desenvolvido por Paulo Marinato, via Alura.</p>
+    </footer>
 </body>
 
 </html>
