--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link">Home</a>
-            <a class="cabecalho__menu__link">Sobre mim</a>
+            <a class="cabecalho__menu__link" href="index.html">Home</a>
+            <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
     <main class="apresentacao">
@@ -22,13 +22,11 @@
             class="titulo-destaque"> com um Front-end de qualidade!
             </strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Paulo Marinato, desenvolvedor
-            Front-end com especialidade em React, HTML e
-            CSS. Ajudo pequenos negócios e designers a
-            colocarem em prática boas ideias. Vamos
-            conversar?</p>
+            Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a
+            colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="https://instagram.com/2paulosmarinato"><img src="assest/instagram.png"> Instagram </a>
+                <a class="apresentacao__links__link" href="https://www.instagram.com/2paulosmarinatos/"><img src="assest/instagram.png"> Instagram </a>
                 <a class="apresentacao__links__link" href="https://github.com/paulomarinato"><img src="assest/github.png"> GitHub </a>
             </div>
         </section>
