Alteração da foto, ajuste das unidades de medidas absolutas e relativas

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
                 <p class="apresentacao__conteudo__texto">Fora da programação, gosto de passar o meu tempo livre com minha familia e ir a praia. Acredito que é importante manter um equilíbrio saudável entre trabalho e lazer para uma vida feliz e produtiva.</p>
                 <p class="apresentacao__conteudo__texto">Obrigado por visitar a minha página e sinta-se à vontade para entrar em contato comigo se quiser conversar ou colaborar em algum projeto!</p>
         </section>
-        <img src="assest/Paulo.jpg" alt="Foto de Paulo Marinato programandor" width="410" height="555">
+        <img class="apresentacao__imagem" src="assest/Paulo.jpeg" alt="Foto de Paulo Marinato programandor">
     </main>
     
     <footer class="rodape">
