--- a/index.html
+++ b/index.html
@@ -25,12 +25,13 @@
             Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a
             colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
-                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                <a class="apresentacao__links__link" href="https://www.instagram.com/2paulosmarinatos/"><img src="assest/instagram.png"> Instagram </a>
-                <a class="apresentacao__links__link" href="https://github.com/paulomarinato"><img src="assest/github.png"> GitHub </a>
+                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>               
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/paulo-marinato/"><img src="assest/linkedin.png"> Linkedin </a>
+                <a class="apresentacao__links__navegacao" href="https://github.com/paulomarinato"><img src="assest/github.png"> GitHub </a>
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/2paulosmarinatos/"><img src="assest/instagram.png"> Instagram </a>
             </div>
         </section>
-        <img src="assest/Paulo.jpg" alt="Foto de Paulo Marinato programandor" width="410" height="555">
+        <img class="apresentacao__imagem" src="assest/Paulo.jpeg" alt="Foto de Paulo Marinato programandor">
     </main>
     <footer class="rodape">
         <p>Desenvolvido por Paulo Marinato, via Alura.</p>
