utilizando meria querie e conceitos de responsividade

--- a/about.html
+++ b/about.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <title>Sobre mim</title>
     <link rel="stylesheet" href="styles/styles.css">
 </head>
+
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
@@ -14,13 +16,18 @@
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
+
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-                <p class="apresentacao__conteudo__texto"> Olá! Meu nome é Paulo Marinato e curso faculdade de Analises e desenvolvimento de sistemas na Universade de Vila Velha, UVV. Sou um estudante de desenvolvimento web em busca de aprender e aprimorar minhas habilidades.</p>
-                <p class="apresentacao__conteudo__texto"> Atualmente estou focado em aprender HTML, CSS, JavaScript e React para me tornar um desenvolvedor capaz de criar sites e aplicações web incríveis. Estou sempre em busca de novos desafios e gosto de trabalhar em projetos que me permitam aprender coisas novas.</p>
-                <p class="apresentacao__conteudo__texto">Fora da programação, gosto de passar o meu tempo livre com minha familia e ir a praia. Acredito que é importante manter um equilíbrio saudável entre trabalho e lazer para uma vida feliz e produtiva.</p>
-                <p class="apresentacao__conteudo__texto">Obrigado por visitar a minha página e sinta-se à vontade para entrar em contato comigo se quiser conversar ou colaborar em algum projeto!</p>
+                <p class="apresentacao__conteudo__texto"> 
+                    Olá! Meu nome é Paulo Marinato e curso faculdade de Analises e desenvolvimento de sistemas na Universade de Vila Velha, UVV. Sou um estudante de desenvolvimento web em busca de aprender e aprimorar minhas habilidades.</p>
+                <p class="apresentacao__conteudo__texto"> 
+                    Atualmente estou focado em aprender HTML, CSS, JavaScript e React para me tornar um desenvolvedor capaz de criar sites e aplicações web incríveis. Estou sempre em busca de novos desafios e gosto de trabalhar em projetos que me permitam aprender coisas novas.</p>
+                <p class="apresentacao__conteudo__texto">
+                    Fora da programação, gosto de passar o meu tempo livre com minha familia e ir a praia. Acredito que é importante manter um equilíbrio saudável entre trabalho e lazer para uma vida feliz e produtiva.</p>
+                <p class="apresentacao__conteudo__texto">
+                    Obrigado por visitar a minha página e sinta-se à vontade para entrar em contato comigo se quiser conversar ou colaborar em algum projeto!</p>
         </section>
         <img class="apresentacao__imagem" src="assest/Paulo.jpeg" alt="Foto de Paulo Marinato programandor">
     </main>
