--- a/about.html
+++ b/about.html
@@ -20,21 +20,26 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-                <p class="apresentacao__conteudo__texto"> 
-                    Olá! Meu nome é Paulo Marinato e curso faculdade de Analises e desenvolvimento de sistemas na Universade de Vila Velha, UVV. Sou um estudante de desenvolvimento web em busca de aprender e aprimorar minhas habilidades.</p>
-                <p class="apresentacao__conteudo__texto"> 
-                    Atualmente estou focado em aprender HTML, CSS, JavaScript e React para me tornar um desenvolvedor capaz de criar sites e aplicações web incríveis. Estou sempre em busca de novos desafios e gosto de trabalhar em projetos que me permitam aprender coisas novas.</p>
-                <p class="apresentacao__conteudo__texto">
-                    Fora da programação, gosto de passar o meu tempo livre com minha familia e ir a praia. Acredito que é importante manter um equilíbrio saudável entre trabalho e lazer para uma vida feliz e produtiva.</p>
-                <p class="apresentacao__conteudo__texto">
-                    Obrigado por visitar a minha página e sinta-se à vontade para entrar em contato comigo se quiser conversar ou colaborar em algum projeto!</p>
+            <p class="apresentacao__conteudo__texto"> 
+                Olá! Meu nome é Paulo Marinato e curso faculdade de Analises e desenvolvimento de sistemas na Universade de Vila Velha, UVV. Sou um estudante de desenvolvimento web em busca de aprender e aprimorar minhas habilidades.</p>
+            <p class="apresentacao__conteudo__texto"> 
+                Atualmente estou focado em aprender HTML, CSS, JavaScript e React para me tornar um desenvolvedor capaz de criar sites e aplicações web incríveis. Estou sempre em busca de novos desafios e gosto de trabalhar em projetos que me permitam aprender coisas novas.</p>
+            <p class="apresentacao__conteudo__texto">
+                Fora da programação, gosto de passar o meu tempo livre com minha familia e ir a praia. Acredito que é importante manter um equilíbrio saudável entre trabalho e lazer para uma vida feliz e produtiva.</p>
+            <p class="apresentacao__conteudo__texto">
+                Obrigado por visitar a minha página e sinta-se à vontade para entrar em contato comigo se quiser conversar ou colaborar em algum projeto!</p>
+            <div class="apresentacao__links">
+                <h2 class="apresentacao__links__subtitulo">Contato:</h2>   
+                    <a class="apresentacao__links__navegacao" href="https://wa.me/5527988974222">WhatsApp</a>             
+                    <a class="apresentacao__links__navegacao" href="mailto:mariantpaulo1@gmail.com">E-mail</a>
+                               
+            </div>
         </section>
-        <img class="apresentacao__imagem" src="assest/Paulo.jpeg" alt="Foto de Paulo Marinato programandor">
+        <img class="apresentacao__imagem" src="./assest/Paulos.jpg" alt="Foto do programador Paulo Marinato">
     </main>
-    
     <footer class="rodape">
         <p>Desenvolvido por Paulo Marinato, via Alura.</p>
     </footer>
-
 </body>
+
 </html>
