--- a/index.html
+++ b/index.html
@@ -5,40 +5,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portifolio</title>
+    <title>Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
             <a class="cabecalho__menu__link" href="about.html">Sobre mim</a>
         </nav>
     </header>
-
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong 
-            class="titulo-destaque"> com um Front-end de qualidade!
-            </strong></h1>
-            <p class="apresentacao__conteudo__texto">
-                Olá! Sou Paulo Marinato, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível<strong 
+            class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Paulo Marinato, desenvolvedor Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
             <div class="apresentacao__links">
-                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>               
-                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/paulo-marinato/"><img src="assest/linkedin.png"> Linkedin </a>
-                <a class="apresentacao__links__navegacao" href="https://github.com/paulomarinato"><img src="assest/github.png"> GitHub </a>
-                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/2paulosmarinatos/"><img src="assest/instagram.png"> Instagram </a>
+                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes</h2>
+                <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/paulo-marinato/"><img src="assest/linkedin.png">Linkedin</a>
+                <a class="apresentacao__links__navegacao" href="https://github.com/paulomarinato"><img src="assest/github.png">GitHub</a>
+                <a class="apresentacao__links__navegacao" href="https://www.instagram.com/2paulosmarinatos/"><img src="assest/instagram.png">Instagram</a>
             </div>
         </section>
-        <img src="assest/Paulo.jpeg" alt="Foto de Paulo Marinato programandor" width="330" height="450">
+        <img class="apresentacao__imagem" src="./assest/Paulo.jpeg" alt="Foto do programador Paulo Marinato">
     </main>
-
     <footer class="rodape">
         <p>Desenvolvido por Paulo Marinato, via Alura.</p>
     </footer>
-
 </body>
 
 </html>
