--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Contato:</h2>   
                     <a class="apresentacao__links__navegacao" href="https://wa.me/5527988974222">WhatsApp</a>             
-                    <a class="apresentacao__links__navegacao" href="mailto:mariantpaulo1@gmail.com">E-mail</a>
+                    <a class="apresentacao__links__navegacao" href="mailto:marinatopaulo1@gmail.com">E-mail</a>
                                
             </div>
         </section>
